Revision history for HTML::Forms

          - Updated dependencies
          - Moved MCat to own distribution
          - Made toke lifetime a config option
          - Adds tags to artist
          - Adds table row traits to MCat
          - Adds an API. Table preferences. JS column traits
          - Adds time zone handling to date field
          - Added config loader role
          - MCat complete
          - MCat track model working
          - MCat cd model working
          - MCat artist model working
          - MCat forms working
          - Added MCat server
          - Javascript mow has its own package deps system
          - Added time with zone field
          - Toggle js working
          - Test forms server and TestMany field types
          - Added more field types
          - Moved namespace::autoclean to end of code

0.1.1     2017-12-04 15:06:49
          - Added project files to master branch
