@@ -47,7 +47,7 @@ sub build_token_prefix {
    my $form    = $self->form or return NUL;
    my $ctx     = $form->context or return NUL;
    my $session = $ctx->session;
-   my $id      = (blessed $session->id ? $session->id : $session->{id}) // NUL;
+   my $id      = (blessed $session ? $session->id : $session->{id}) // NUL;
 
    return $id;
 }
